--- a/index.html
+++ b/index.html
@@ -8,25 +8,55 @@
 </head>
 <body>
     <div class="container">
-        <div class="config-container">
-            <h2>Añadir objeto</h2>
-            <label for="objWeight">Peso (kg):</label>
-            <input required type="number" id="objWeight" min="1" max="15" step="1" value="1">
-            <label for="objValue">Valor: </label>
-            <input required type="number" id="objValue" min="1" max="50" step="1" value="1">
-            <label for="objColor">Selecciona un color: </label>
-            <input type="color" id="objColor" value="#FF714B">
-            <button id="addObjBtn" onclick="addObject()">+</button>
+    <div class="flex">
+        <div class="obj-container">
+            <div class="config-container box-outline">
+                <h2>Añadir objeto</h2>
+                <label for="objWeight">Peso (kg):</label>
+                <input required type="number" id="objWeight" min="1" max="15" step="1" value="1">
+                <label for="objColor">Selecciona un color: </label>
+                <input type="color" id="objColor" value="#FF714B">
+                <label for="objValue">Valor: </label>
+                <input required type="number" id="objValue" min="1" max="50" step="1" value="1">
+                <button id="addObjBtn" class="btn" onclick="addObject()">+</button>
+            </div>
+        
+            <div class="backpack-container box-outline">
+                <!--             <canvas id="objectsCanvas"></canvas>-->
+                <div class="backpack-input">
+                    <label for="backpack">Capacidad máxima de la mochila (kg):</label>
+                    <input type="number" id="backpackWeight" min="3" max="25" step="1" value="10">
+                </div>
+                <button id="start" class="btn" onclick="start()">Comenzar Algoritmo</button>
+            </div>
+
+            <div class="final-results-container box-outline hidden">
+
+            </div>
         </div>
 
-        <canvas id="objectsCanvas"></canvas>
-
-        <div class="backpack-container">
-<!--             <canvas id="objectsCanvas"></canvas>-->
-            <label for="backpack">Capacidad máxima de la mochila (kg):</label>
-            <input type="number" id="backpackWeight" min="3" max="25" step="1" value="10">
-            <button id="start" onclick="start()">Comenzar Algoritmo</button>
+                
+        <div class="obj-canvas-container box-outline">
+            <h3>Objetos: </h3>
+            <canvas id="objectsCanvas"></canvas>
         </div>
+    </div>
+
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Peso</th>
+                    <th>Valor</th>
+                    <th>Ratio Valor / Peso</th>
+                    <th>Color</th>
+                    <th>Seleccionado</th>
+                </tr>
+            </thead>
+            <tbody id="info-tbody">
+
+            </tbody>
+        </table>
     </div>
 
     <script src="script.js"></script>
