fixes + better coments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="flex">
             <div class="obj-container">
                 <div class="config-container box-outline">
-                    <h2>Añadir objeto</h2>
+                    <h2>Ajustes</h2>
                     <div class="input-group weight">
                         <label for="objWeight">Peso (kg):</label>
                         <input required type="number" id="objWeight" min="1" max="15" step="1" value="1">
